--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,9 @@
 
   "manifest_version": 2,
   "name": "X-Plane plugin manager",
-  "version": "0.1.0",
+  "version": "0.2.2",
 
-  "description": "foo",
+  "description": "forums.x-plane.org plugin manager",
   "homepage_url": "https://github.com/Mikerosoft25/plugin-manager",
 
   "applications": {
