--- a/manifest_chrome.json
+++ b/manifest_chrome.json
@@ -1,12 +1,12 @@
 {
   "manifest_version": 2,
   "name": "X-Plane plugin manager",
-  "version": "1.3.3",
+  "version": "2.0.0",
   "description": "plugin manager",
 
   "browser_action": {
     "default_icon" : "icons/icon.png",
-    "default_title": "yes",
+    "default_title": "X-Plane plugin manager v2.0.0",
     "default_popup": "popup/popup.html"
   },
 
@@ -19,7 +19,10 @@
 
   "content_scripts": [{
     "matches": ["http://*/*"],
-    "css": ["popup/stylesheet.css"],
+    "css": [
+      "popup/stylesheet.css",
+      "node_modules/normalize.css/normalize.css"
+    ],
     "js": [
       "node_modules/webextension-polyfill/dist/browser-polyfill.js",
       "popup/script.js"
