--- a/manifest_firefox.json
+++ b/manifest_firefox.json
@@ -1,39 +1,38 @@
 {
 
-  "manifest_version": 2,
-  "name": "X-Plane plugin manager",
-  "version": "1.3.3",
+	"manifest_version": 2,
+	"name": "X-Plane plugin manager",
+	"version": "2.0.0",
 
-  "description": "forums.x-plane.org plugin manager",
-  "homepage_url": "https://github.com/Mikerosoft25/plugin-manager",
+	"description": "forums.x-plane.org plugin manager",
+	"homepage_url": "https://github.com/Mikerosoft25/plugin-manager",
 
-  "applications": {
-    "gecko": {
-      "id": "{a8e5aca1-9786-437b-ad99-2f1a795ae5e5}",
-      "strict_min_version": "48.0"
-    }
-  },
+	"applications": {
+		"gecko": {
+			"id": "{a8e5aca1-9786-437b-ad99-2f1a795ae5e5}",
+			"strict_min_version": "48.0"
+		}
+	},
 
-  "icons": {
-    "48": "icons/icon.svg",
-    "96": "icons/icon.svg"
-  },
+	"icons": {
+		"48": "icons/icon.png",
+		"96": "icons/icon.png"
+	},
 
-  "browser_action": {
-    "browser_style": true,
-    "default_icon": {
-      "48": "icons/icon.svg",
-      "96": "icons/icon.svg"
-    },
-    "default_title": "X-Plane plugin manager",
-    "default_popup": "popup/popup.html"
-  },
+	"browser_action": {
+		"browser_style": true,
+		"default_icon": {
+			"48": "icons/icon.png",
+			"96": "icons/icon.png"
+		},
+		"default_title": "X-Plane plugin manager v2.0.0",
+		"default_popup": "popup/popup.html"
+	},
 
-  "permissions": [
-    "storage",
-    "activeTab",
-    "tabs",
-    "*://forums.x-plane.org/*"
-  ]
+	"permissions": [
+		"storage",
+		"tabs",
+		"*://forums.x-plane.org/*"
+	]
 
 }
