--- a/manifest_chrome.json
+++ b/manifest_chrome.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
   "name": "X-Plane plugin manager",
-  "version": "2.0.0",
-  "description": "plugin manager",
+  "version": "2.0.1",
+  "description": "forums.x-plane.org plugin manager",
 
   "browser_action": {
     "default_icon" : "icons/icon.png",
