--- a/manifest_chrome.json
+++ b/manifest_chrome.json
@@ -1,12 +1,17 @@
 {
   "manifest_version": 2,
   "name": "X-Plane plugin manager",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "forums.x-plane.org plugin manager",
 
   "browser_action": {
-    "default_icon" : "icons/icon.png",
-    "default_title": "X-Plane plugin manager v2.0.2",
+    "default_icon": {
+      "48": "icons/addon_icon48.png",
+		  "64": "icons/addon_icon64.png",
+		  "96": "icons/addon_icon96.png",
+		  "128": "icons/addon_icon128.png"
+    },
+    "default_title": "X-Plane plugin manager v2.0.4",
     "default_popup": "popup/popup.html"
   },
 
